[package]
name = "mbedtls"
version = "0.1.0"
authors = ["Ashish Kankal <ashish25895@gmail.com>","Priyanka Mishra <mishpriyanka0209@gmail.com>"]
edition = "2018"

[features]
# Camellia mode features flags
camellia-ecb-mode = []
camellia-cbc-mode = []
camellia-ctr-mode = []

# Camellia feature flags
camellia = ["camellia-ecb-mode", "camellia-cbc-mode", "camellia-ctr-mode"]

cipher = ["camellia"]

# Project Feature flags
default = ["cipher"]
