[package]
name = "ps-ab-hashing"
version = "0.1.0"
authors = ["prateek"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# [features]
# SHA256 = []
# cargp test --features="SHA256"


# cargo test

# cargo test -- --nocapture